--- a/index.html
+++ b/index.html
@@ -29,31 +29,31 @@
             <td class="info-nome">Mariana</td>
             <td class="info-produto">Camiseta G - Azul</td>
             <td class="info-qtd">1</td>
-            <td class="info-valor">R$ 50,00</td>
-            <td class="info-total">R$ 50,00</td>
+            <td class="info-valor">50</td>
+            <td class="info-total">0</td>
         </tr>
         <tr>
             <td class="info-nome">Carolina</td>
             <td class="info-produto">Camiseta M - Preta</td>
             <td class="info-qtd">3</td>
-            <td class="info-valor">R$ 40,00</td>
-            <td class="info-total">R$ 120,00</td>
+            <td class="info-valor">40</td>
+            <td class="info-total">10</td>
             
         </tr>
         <tr>
             <td class="info-nome">Daniele</td>
             <td class="info-produto">Camiseta P - Marrom</td>
             <td class="info-qtd">7</td>
-            <td class="info-valor">R$ 30,00</td>
-            <td class="info-total">R$ 210,00</td>
+            <td class="info-valor">30</td>
+            <td class="info-total">20</td>
             
         </tr>
         <tr>
             <td class="info-nome">Felipe</td>
             <td class="info-produto">Regata M - Vermelha</td>
             <td class="info-qtd">5</td>
-            <td class="info-valor">R$ 35,00</td>
-            <td class="info-total">R$ 175,00</td>
+            <td class="info-valor">35</td>
+            <td class="info-total">10</td>
         </tr>
     </table>
     <script src="test.js"></script>
