--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <hr>
 
     <table>
-        <tr>
+        <tr class="cliente">
             <th>Nome</th>
             <th>Produto</th>
             <th>Quantidade</th>
@@ -32,7 +32,7 @@
             <td class="info-valor">50</td>
             <td class="info-total">0</td>
         </tr>
-        <tr>
+        <tr class="cliente">
             <td class="info-nome">Carolina</td>
             <td class="info-produto">Camiseta M - Preta</td>
             <td class="info-qtd">3</td>
@@ -48,7 +48,7 @@
             <td class="info-total">20</td>
             
         </tr>
-        <tr>
+        <tr class="cliente">
             <td class="info-nome">Felipe</td>
             <td class="info-produto">Regata M - Vermelha</td>
             <td class="info-qtd">5</td>
@@ -56,6 +56,6 @@
             <td class="info-total">10</td>
         </tr>
     </table>
-    <script src="test.js"></script>
+    <script src="calculaTotal.js"></script>
 </body>
 </html>
