--- a/index.html
+++ b/index.html
@@ -18,34 +18,34 @@
     <hr>
 
     <table>
-        <tr class="cliente">
+        <tr>
             <th>Nome</th>
             <th>Produto</th>
             <th>Quantidade</th>
             <th>Valor Unitário</th>
             <th>Total</th>
         </tr>
-        <tr>
+        <tr class="cliente">
             <td class="info-nome">Mariana</td>
             <td class="info-produto">Camiseta G - Azul</td>
-            <td class="info-qtd">1</td>
+            <td class="info-qtd">5</td>
             <td class="info-valor">50</td>
-            <td class="info-total">0</td>
+            <td class="info-total"></td>
         </tr>
         <tr class="cliente">
             <td class="info-nome">Carolina</td>
             <td class="info-produto">Camiseta M - Preta</td>
             <td class="info-qtd">3</td>
             <td class="info-valor">40</td>
-            <td class="info-total">10</td>
+            <td class="info-total"></td>
             
         </tr>
-        <tr>
+        <tr class="cliente">
             <td class="info-nome">Daniele</td>
             <td class="info-produto">Camiseta P - Marrom</td>
             <td class="info-qtd">7</td>
             <td class="info-valor">30</td>
-            <td class="info-total">20</td>
+            <td class="info-total"></td>
             
         </tr>
         <tr class="cliente">
@@ -53,7 +53,7 @@
             <td class="info-produto">Regata M - Vermelha</td>
             <td class="info-qtd">5</td>
             <td class="info-valor">35</td>
-            <td class="info-total">10</td>
+            <td class="info-total"></td>
         </tr>
     </table>
     <script src="calculaTotal.js"></script>
