--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                 <div class="grupo2">
                     <label class="texto-campo" for="nome">Produto:</label><br>
-                    <select class="selecionador" name="nome" id="nome" placeholder="Selecione">
+                    <select class="selecionador" name="nome" id="produto" placeholder="Selecione">
                         <option value="Calça">Calça</option>
                         <option value="Cueca">Camiseta</option>
                         <option value="Meia">Camisola</option>
@@ -83,7 +83,7 @@
 
                 <div class="grupo2">
                     <label class="texto-campo" for="nome">Valor Unitário:</label><br>
-                    <input type="number" name="nome" id="nome" placeholder="Digite o valor unitario do produto">
+                    <input type="number" name="nome" id="valor" placeholder="Digite o valor unitario do produto">
                 </div>
                 <button id="adicionar-encomenda" type="submit">Adicionar</button>
             </form>
